classic theme, ivy accents flavor. fix minor spacing issue in block h2's

--- a/openscholar/themes/hwpi_classic/flavors/ivy_accents/ivy_accents.css
+++ b/openscholar/themes/hwpi_classic/flavors/ivy_accents/ivy_accents.css
@@ -38,6 +38,7 @@ border-top-right-radius: 3px;
 
 #menu-bar ul.nice-menu ul {
     background: #EBEBEB;
+    top: 3.36em !important;
 }
 
 #menu-bar ul.nice-menu .menuparent a {
@@ -87,9 +88,9 @@ border-top-right-radius: 3px;
      padding: 15px;
 }
 
-
+.sidebar .block-boxes-os_boxes_sectionnav .block-content,
 .sidebar .block-boxes-os-pages-section-nav .block-content {
-    padding: 0;
+    padding: 15px 0px;
 }
 
 .sidebar .block.section-nav, #content-column .block.section-nav {
@@ -107,9 +108,6 @@ border-top-right-radius: 3px;
      padding: 7px 15px;
 }
 
-.not-front h2.block-title {
-    padding: 7px 15px;
-}
 
 #content-panels .block-inner {
      margin-top: 0px;
